# oneDNN

./: CMakeLists.txt  README.md  pre.sh
cmake/: FindBANG.cmake  FindCNNL.cmake  FindHIP.cmake  FindMIOpen.cmake  FindOpenCL.cmake  FindrocBLAS.cmake  SYCL.cmake  options.cmake
cmake/lnx/: TBBConfig.cmake
examples/primitives/: batch-normalization_make.cpp  convolution.cpp  convolution_make.cpp  logsoftmax.cpp  logsoftmax_make.cpp  matmul.cpp  matmul_make.cpp  (+3 more)
src/gpu/amd/: CMakeLists.txt  miopen_batch_normalization.cpp  miopen_batch_normalization.hpp  miopen_batch_normalization_executor.hpp  miopen_batch_normalization_impl.hpp  miopen_binary.cpp  miopen_binary.hpp  miopen_binary_impl.hpp  miopen_concat.cpp  miopen_conv_filter_adjustment_base.hpp  miopen_conv_inner_product.hpp  miopen_conv_inner_product_impl.hpp  miopen_convolution.hpp  miopen_convolution_impl.hpp  miopen_convolution_pd.hpp  miopen_eltwise.hpp  miopen_eltwise_impl.hpp  miopen_gemm_inner_product.hpp  miopen_gemm_inner_product_impl.hpp  miopen_inner_product.hpp  miopen_inner_product_impl.hpp  miopen_lrn.hpp  miopen_lrn_impl.hpp  miopen_matmul.hpp  miopen_pooling.hpp  miopen_pooling_impl.hpp  miopen_reorder.hpp  miopen_softmax.hpp  miopen_softmax_impl.hpp  miopen_sum.hpp  sycl_hip_compat.hpp  sycl_hip_engine.cpp  sycl_hip_engine.hpp  sycl_hip_scoped_context.cpp  sycl_hip_scoped_context.hpp  sycl_hip_stream.cpp  sycl_hip_stream.hpp  sycl_hip_utils.cpp  sycl_hip_utils.hpp
src/gpu/cambricon/: CMakeLists.txt  cnnl_batch_normalization.cpp  cnnl_batch_normalization.hpp  cnnl_batch_normalization_executor.hpp  cnnl_batch_normalization_impl.hpp  cnnl_binary.cpp  cnnl_binary.hpp  cnnl_binary_impl.hpp  cnnl_concat.cpp  cnnl_concat.hpp  cnnl_concat_impl.cpp  cnnl_concat_impl.hpp  cnnl_conv_filter_adjustment_base.hpp  cnnl_convolution.cpp  cnnl_convolution.hpp  cnnl_convolution_impl.hpp  cnnl_convolution_pd.hpp  cnnl_eltwise.cpp  cnnl_eltwise.hpp  cnnl_eltwise_impl.hpp  cnnl_lrn.cpp  cnnl_lrn.hpp  cnnl_lrn_impl.hpp  cnnl_matmul.hpp  cnnl_pooling.cpp  cnnl_pooling.hpp  cnnl_pooling_impl.hpp  cnnl_reorder.cpp  cnnl_reorder.hpp  cnnl_reorder_impl.cpp  cnnl_reorder_impl.hpp  cnnl_softmax.cpp  cnnl_softmax.hpp  cnnl_softmax_impl.hpp  cnnl_split.cpp  cnnl_split.hpp  cnnl_split_impl.hpp  sycl_bang_compat.hpp  sycl_bang_engine.cpp  sycl_bang_engine.hpp  (+6 more)
(+35 files in other folders)
